--- a/pages/response.html
+++ b/pages/response.html
@@ -65,11 +65,11 @@
           "playlist"
         );
 
-        // fetch(
-        //   `/response?token=${sessionStorage.getItem(
-        //     "token"
-        //   )}&playlistId=${playlistId}`
-        // );
+        fetch(
+          `/response?token=${sessionStorage.getItem(
+            "token"
+          )}&playlistId=${playlistId}`
+        );
       }
 
       let selectedPlaylist = null;
