--- a/pages/roaster.html
+++ b/pages/roaster.html
@@ -7,13 +7,16 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
     />
     <title>Rate My Music</title>
-    <link href="global.css" rel="stylesheet" type="text/css" />
+    <link href="roaster.css" rel="stylesheet" type="text/css" />
     <!-- <script type="text/javascript" src="https://livejs.com/live.js"></script> -->
   </head>
 
   <body>
     <!-- This header is my really broken way of adding padding to the top of the page-->
-    <div class="header"></div>
+    <header>
+      <h1>Roast My Library</h1>
+      <div class="user-avatar"></div>
+    </header>
     <div class="container">
       <div class="loading-container">
         <p id="loading-prompt">
@@ -22,64 +25,14 @@
         </p>
         <div class="progress-bar"></div>
       </div>
-      <div class="text-container"></div>
-    </div>
-    <!-- </main> -->
-    <footer class="footer">
-      <!-- <div class="logos">
-        <div class="logos-slide">
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b273c9fec49c8930fb10e4756dfe"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b273adfadf345224340773549507"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b2734afc20695127f696ec16f828"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b273f239a45be61917fd61898241"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b273583ce664168dca88fdc1c4c1"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b273310909bc20d587f8792a7039"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b2732a1073dd2629bffca89c2288"
-          />
-        </div>
-        <div class="logos-slide">
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b273c9fec49c8930fb10e4756dfe"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b273adfadf345224340773549507"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b2734afc20695127f696ec16f828"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b273f239a45be61917fd61898241"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b273583ce664168dca88fdc1c4c1"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b273310909bc20d587f8792a7039"
-          />
-          <img
-            src="https://i.scdn.co/image/ab67616d0000b2732a1073dd2629bffca89c2288"
-          />
-        </div>
+      <!-- <div class="text-container"></div>
+      <div class="imagecontainer">
       </div> -->
+    </div>
+    <footer>
+      <button id="gradeButton" disabled>Try Again?</button>
     </footer>
     <script>
-      const urlParams = new URLSearchParams(window.location.search);
-      const code = urlParams.get("code");
-      const state = urlParams.get("state");
-
       const fake_res = [
         "Lorem ipsum odor amet, consectetuer adipiscing elit. Suspendisse tortor ac aliquet; mattis ipsum at venenatis? Porttitor rhoncus vestibulum litora fringilla vitae porttitor laoreet. Fames ultricies ac nulla, scelerisque habitant ligula. Erat viverra ornare interdum posuere dis dui. Tortor ac mauris nullam elit pulvinar tempus. Cubilia eu turpis risus per mauris.",
         "Placerat praesent non proin vulputate tincidunt penatibus duis tristique. Est laoreet justo erat fringilla tristique lacinia quisque suspendisse. Purus eu est duis; quis nostra pharetra natoque fusce. Ultricies commodo sit parturient justo luctus; cursus congue torquent. Nec nullam erat mi rutrum sodales dapibus. Accumsan iaculis arcu habitasse euismod aliquet integer diam nisl. Rutrum augue pulvinar mi ac phasellus vehicula. Lectus donec nisl netus ante pharetra facilisi luctus fermentum inceptos. Dolor ac orci risus vehicula sagittis integer.",
@@ -94,66 +47,58 @@
         return new Promise((resolve) => setTimeout(resolve, ms));
       }
 
-      const fake_albums = [
-        "https://i.scdn.co/image/ab67616d0000b2734afc20695127f696ec16f828",
-        "https://i.scdn.co/image/ab67616d0000b273adfadf345224340773549507",
-        "https://i.scdn.co/image/ab67616d0000b273310909bc20d587f8792a7039",
-        "https://i.scdn.co/image/ab67616d0000b2734afc20695127f696ec16f828",
-        "https://i.scdn.co/image/ab67616d0000b273adfadf345224340773549507",
-        "https://i.scdn.co/image/ab67616d0000b273310909bc20d587f8792a7039",
-      ];
-
       async function onLoad() {
-        fetch(`/main?code=${code}&state=${state}`).then((res) => {
+        const token = sessionStorage.getItem("token");
+        const avatar = sessionStorage.getItem("avatar");
+        if (avatar) {
+          const avatarContainer = document.querySelector(".user-avatar");
+          const avatarImg = document.createElement("img");
+          avatarImg.src = avatar;
+          avatarContainer.appendChild(avatarImg);
+        }
+        fetch(`/response2?token=${token}`).then((res) => {
           res.json().then((data) => {
+            console.log(data);
             const loader = document.querySelector(".progress-bar");
             loader.style.display = "none";
             const prompt = document.querySelector(".loading-container");
             prompt.style.display = "none";
-            // populateSlider(fake_albums);
+            initializeImages(data.response);
             // textDelay(fake_res);
-            populateSlider(data.response.albums_res);
-            textDelay(data.response.text_res);
           });
         });
       }
 
-      // populateSlider(albums);
-
-      function populateSlider(albums) {
-        const footer = document.querySelector(".footer");
-        const logosDiv = document.createElement("div");
-        logosDiv.classList.add("logos");
-
-        // I tried to do this using Node.copy instead of hard coding 2 different elements
-        // However, this was giving me issues and working incorrectly on IOS Mobile devices
-        const logosSlide1 = document.createElement("div");
-        logosSlide1.classList.add("logos-slide");
-
-        const logosSlide2 = document.createElement("div");
-        logosSlide2.classList.add("logos-slide");
-
-        for (const album of albums) {
-          var img1 = document.createElement("img");
-          img1.src = album;
-          var img2 = document.createElement("img");
-          img2.src = album;
-          logosSlide1.appendChild(img1);
-          logosSlide2.appendChild(img2);
+      function initializeImages(images) {
+        const imageContainer = document.createElement("div");
+        imageContainer.classList.add("imagecontainer");
+        document.querySelector(".container").appendChild(imageContainer);
+        // const imageContainer = document.querySelector(".imagecontainer");
+        for (const image of images) {
+          let img = document.createElement("img");
+          img.src = image;
+          imageContainer.appendChild(img);
         }
-
-        // let copy = logosSlide.cloneNode(true);
-        // logosDiv.appendChild(copy);
-
-        // logosDiv.appendChild(logosSlide1);
-        logosDiv.appendChild(logosSlide2);
-
-        footer.appendChild(logosDiv);
+        fadeImages(imageContainer);
       }
 
-      // const intro = [
-      //   "Sit back, relax, and let the music speak for itself. Your rating is being calculated now.",
-      // ];
+      async function fadeImages(imageContainer) {
+        const images = document.querySelectorAll(".imagecontainer img");
+        let count = 0;
+        while (true) {
+          if (count === images.length) {
+            count = 0;
+          }
+          images[count].classList.add("entering");
+          await new Promise((resolve) => setTimeout(resolve, 2000));
+          images[count].classList.remove("entering");
+          images[count].classList.add("exiting");
+          await new Promise((resolve) => setTimeout(resolve, 2000));
+          count++;
+        }
+      }
+
+      // populateSlider(albums);
 
       async function textDelay(text_array) {
         let i = 1;
