--- a/pages/main.html
+++ b/pages/main.html
@@ -53,10 +53,12 @@
       const urlParams = new URLSearchParams(window.location.search);
       const code = urlParams.get("code");
       const state = urlParams.get("state");
+      const token = sessionStorage.getItem("token");
 
-      onLoad();
-
-      async function onLoad() {
+      async function initializePage() {
+        if (token) {
+          return;
+        }
         fetch(`/main?code=${code}&state=${state}`).then((res) => {
           res.json().then((data) => {
             sessionStorage.setItem("token", data.response.token);
@@ -64,6 +66,8 @@
           });
         });
       }
+
+      document.addEventListener("DOMContentLoaded", initializePage);
     </script>
   </body>
 </html>
